# env-init

./: .gitignore  Cargo.toml  README.md  REAEDME.md  install.sh  justfile  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
files/: .gitconfig  config.fish  gitalias.txt  settings.json  starship.toml
files/ssh/: .profile  50-ubuntu.conf  chsh  custom.conf  gdm-autologin  gdm-password  sshd_config
src/: base.rs  common.rs  exec.rs  init.rs  install.rs  main.rs  node.rs  reset.rs  root.rs  rust.rs  shell.rs  ssh.rs  vscode.rs  windows.rs  wt.rs
ubuntu/: .zshrc  ace.zsh-theme  init.js  init.sh  install.js  multi.js  plugin-util.js  plugin.json  starship.toml  vscode.js
ubuntu/ssh/: 50-ubuntu.conf  gdm-autologin
ubuntu/ssh-2104/: .profile  custom.conf  root.js  ssh.js  sshd_config
ubuntu/ssh-2110/: .profile  root.js  ssh.js  sshd_config
ubuntu/ssh-2204/: root.js  sshd_config
